# codexmgr

./: .gitignore  README.md  pyproject.toml
.github/actions/install_package/: action.yml
.github/workflows/: py_test.yml  version_publish_main.yml
.plan/mcp-user-config-management/: 00-current-state.md  01-implementation-roadmap.md  02-milestones.md  03-dependencies.md  04-validation-and-risk.md  05-agent-handoff.md  README.md  appendix-thoughts-synthesis.md  decision-log.md
.plan/mcp-user-config-management/tasks/: task-001-establish-fixtures-and-scope.md  task-002-round-trip-user-config-infrastructure.md  task-003-read-model-list-show.md  task-004-enable-disable-existing-servers.md  task-005-safe-parameter-mutation.md  task-006-validation-diagnostics-and-help.md  task-007-documentation.md  task-008-final-regression-and-handoff.md
src/codexmgr/: __init__.py  agents_file.py  agentsmd.py  cli.py  cli_parser.py  codex.py  errors.py  health.py  mcp.py  mcp_apply.py  mcp_cli.py  mcp_discovery.py  mcp_fields.py  mcp_model.py  mcp_mutation.py  mcp_user_config.py  navigation.py  options.py  paths.py  project.py  project_config.py  renderer.py  skill_listing.py  skills.py  sync.py  toml_io.py  user_config.py
src/codexmgr/agents/: __init__.py  file.py  manager.py  renderer.py
src/codexmgr/commands/: __init__.py  codex.py  codex_jit.py  config_mutations.py  health.py  navigation.py  rules.py
src/codexmgr/core/: __init__.py  toml_io.py
src/codexmgr/custom_agents/: __init__.py  cli.py  config.py  copies.py  listing.py  resolution.py  sources.py
src/codexmgr/hooks/: __init__.py  config.py  copies.py  listing.py  merge.py  resolution.py  sources.py
src/codexmgr/interface/: __init__.py  cli.py  parser.py
src/codexmgr/mcp/: __init__.py  apply.py  cli.py  config.py  discovery.py  fields.py  tables.py
src/codexmgr/project/: __init__.py  apply.py  config.py  generated.py  snapshot.py  state.py  sync.py
src/codexmgr/rules/: __init__.py  config.py  copies.py  listing.py  resolution.py  (+1 more)
tests/: conftest.py  test_agents_cli.py  test_agents_file.py  test_agentsmd_list_cli.py  test_agentsmd_tools_cli.py  test_apply_check_cli.py  test_cd_cli.py  test_cli.py  test_codex_cli.py  test_empty_skill_config_cli.py  test_home_resolution_cli.py  test_hooks_cli.py  test_mcp_apply_cli.py  test_mcp_cli.py  test_mcp_user_config.py  test_mcp_validation_cli.py  test_package_metadata.py  test_packages_cli.py  test_paths.py  test_python_compatibility.py  test_renderer.py  test_rules_cli.py  test_skill_copies_cli.py  test_skill_home_sources_cli.py  test_skill_list_cli.py  test_skills_cli.py  test_status_doctor_cli.py  test_sync_cli.py  test_toml_io.py  test_tui_app.py  test_tui_state.py
(+24 files in other folders)
