[project]
name = "codexmgr"
version = "0.1.0"
description = "Manage project-local Codex configuration from reusable templates"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []
keywords = ["codex", "cli", "configuration", "agents", "skills"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Typing :: Typed",
]

[project.scripts]
codexmgr = "codexmgr.cli:entrypoint"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codexmgr"]

[dependency-groups]
dev = [
    "codexmgr[dev]",
]

[tool.uv.sources]
codexmgr = { workspace = true }
